# TaskForge

./: CMakeLists.txt  LICENSE  README.md
include/: MonteCarlo.hpp  MonteCarloSIMD.hpp  ThreadPool.hpp
src/: rng_benchmark.cpp
src/01_naive_threads/: main.cpp
src/01_sequential/: main.cpp
src/02_basic_pool/: README.md  ThreadPool.cpp  main.cpp
src/03_future_pool/: README.md  ThreadPool.cpp  ThreadPool.hpp  main.cpp
src/04_hpc_aligned/: main.cpp
src/05_jthread_pool/: ThreadPool.cpp  ThreadPool.hpp  main.cpp
src/06_simd_vectorization/: README.md  main.cpp
